--- a/scss/_customVariables.scss
+++ b/scss/_customVariables.scss
@@ -1,7 +1,7 @@
 $primary: #06bc9b;
 $secondary: #0e89ac;
 $bg-primary: linear-gradient( 90deg, rgba(14, 172, 120, 0.8939950980392157) 54%, rgba(7, 51, 38, 1) 100%);
-$bg-secondary: linear-gradient( 90deg, rgba(14, 137, 172, 0.8939950980392157) 54%, rgba(7, 53, 84, 1) 100%);
+$bg-secondary: #053b60;
 $font-family-heads: "Orbitron",
 sans-serif;
 $font-family-p: "Rubik",
