--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -46,6 +46,7 @@ h5 {
 p {
     font-family: $font-family-p;
     font-size: 2em;
+    color: $text-muted;
 }
 
 .btn {
@@ -55,11 +56,46 @@ p {
     border: none;
     font-size: 1.5em;
     padding: 10px 15px;
+    box-shadow: inset 12px 12px 16px 0 rgba(0, 0, 0, 0.644), inset -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
     i {
-        margin-left: 4em;
+        margin-left: 3em;
+    }
+}
+
+.btn:hover {
+    transform: scale(1.2);
+    transition: transform 2s;
+    i {
+        animation: myAnimation infinite 0.5s ease-in alternate;
+        @keyframes myAnimation {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(10px);
+            }
+        }
     }
 }
 
 li {
     list-style-type: none;
+}
+
+.modal-header {
+    h1 {
+        font-size: 2em;
+    }
+}
+
+.modal-footer {
+    .btn {
+        padding: 0 10px;
+        margin: 1em;
+        font-size: 1em;
+    }
+    .btn-secondary {
+        background: rgb(177, 171, 171);
+    }
 }
