--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1,4 +1,5 @@
 @import "customVariables";
+// *****************************************HOME PAGE ***********************************************
 // NAVBAR
 nav {
     background-color: $primary;
@@ -46,6 +47,11 @@ nav {
 // SECTION a
 .section-a {
     margin-top: 5em;
+    background: url(../images/Project1/background.png);
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
     img {
         max-width: 400px;
         margin-bottom: 5em;
@@ -62,6 +68,10 @@ nav {
 // SECTION b
 .section-b {
     margin-top: $section-margin-top;
+    .container {
+        padding: 4em 2em;
+        background: rgb(241, 239, 239);
+    }
     img {
         max-width: 90%;
     }
@@ -85,11 +95,21 @@ nav {
 //SECTION d
 .section-d {
     margin-top: $section-margin-top;
+    .container {
+        padding: 4em 4em;
+        background: rgb(241, 239, 239);
+        border-radius: 20px;
+    }
     .col-md-4 {
         display: flex;
         flex-direction: column;
         text-align: center;
         justify-content: center;
+        padding: 0 10px;
+        border-radius: 20px;
+        h3 {
+            color: $primary;
+        }
         .fas {
             font-size: 5em;
             color: $primary;
@@ -128,15 +148,193 @@ nav {
 // FOOTER
 footer {
     background-color: $secondary;
+    .container {
+        background: $bg-secondary;
+    }
     .social-list {
         display: flex;
         justify-content: center;
         margin: 2em;
+        .social1 {
+            background: #2ba1c5;
+            border-radius: 100%;
+            margin: 1.3em;
+        }
+        .social2 {
+            background: #b30c0c;
+            border-radius: 100%;
+            margin: 1.3em;
+        }
+        .social3 {
+            background: #3664a2;
+            border-radius: 100%;
+            margin: 1.3em;
+        }
+        .social4 {
+            background: #1e75af;
+            border-radius: 100%;
+            margin: 1.3em;
+        }
         a {
             color: $white;
-            margin: 1.3em;
-            font-size: 2em;
+            font-size: 1.5em;
             font-weight: $font-weight-bold;
+            padding: 1em;
+        }
+        .btn-bottom {
+            padding: 2px 10px;
+            background: #2ba1c5;
+            border: none;
+        }
+    }
+    .back-to-top {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        p {
+            font-size: 1.5em;
+            color: $white;
+            display: none;
+        }
+        .fa-arrow-circle-up {
+            margin-bottom: 1em;
+            background: $primary;
+            padding: 25px;
+            border-radius: 100%;
+            font-size: 2em;
+            color: $white;
+            box-shadow: 12px 12px 16px 0 rgba(246, 243, 243, 0.678) inset, -8px -8px 12px 0 rgba(0, 0, 0, 0.651) inset;
+        }
+    }
+    .back-to-top:hover {
+        p {
+            display: inline;
+        }
+        .fa-arrow-circle-up {
+            transform: scale(1.3);
+            transition: transform 2s;
+            animation: myArrow infinite 0.5s ease-in alternate;
+            @keyframes myArrow {
+                0% {
+                    transform: translateY(0);
+                }
+                100% {
+                    transform: translateY(20px);
+                }
+            }
+        }
+    }
+}
+
+// *****************************************MENTORSHIP PAGE ***********************************************
+.section-mentorship {
+    margin-top: 20em;
+    .container {
+        padding: 4em 4em;
+        background: rgb(241, 239, 239);
+        border-radius: 20px;
+    }
+    .col-md-4 {
+        background: $white;
+        padding: 2em;
+        text-align: center;
+        border: 10px solid rgb(241, 239, 239);
+        border-radius: 20px;
+        h2 {
+            color: $primary;
+        }
+        .money {
+            font-size: 2.5em;
+            color: $primary;
+            margin: 1em;
+        }
+        .good {
+            color: $primary;
+        }
+    }
+    .col-12 {
+        margin-top: 3em;
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.mentoring-style {
+    margin-top: $section-margin-top;
+    .col-12 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1 {
+            color: $primary;
+        }
+        p {
+            margin: 2em;
+        }
+    }
+    .col-md-6 {
+        padding: 3em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background: rgb(245, 242, 242);
+        border-radius: 20px;
+        border: 10px solid white;
+        h2 {
+            color: $primary;
+        }
+        p {
+            text-align: center;
+        }
+    }
+}
+
+// *****************************************PORTFOLIO PAGE ***********************************************
+.recent-works {
+    margin: 10em;
+    .col-12 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1 {
+            color: $primary;
+        }
+        span {
+            color: $primary;
+        }
+    }
+}
+
+.projects {
+    .card {
+        padding: 0;
+        background: #525d68 !important;
+        border: 5px solid $white;
+        border-radius: 20px;
+        img {
+            height: 300px;
+        }
+        .card-img-overlay {
+            display: none;
+            h5 {
+                color: $primary;
+            }
+            p {
+                text-align: center;
+            }
+        }
+    }
+    .card:hover {
+        img {
+            opacity: 0;
+            transition: opacity 2.2s;
+        }
+        .card-img-overlay {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
     }
 }
