--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -52,15 +52,90 @@ nav {
     height: 100vh;
     background-position: center;
     background-size: cover;
+    position: relative;
     img {
-        max-width: 400px;
+        max-width: 250px;
         margin-bottom: 5em;
+        clip-path: circle(26.3% at 51% 51%);
     }
     .col-12 {
         margin-top: 5em;
         text-align: center;
+        color: $white;
         p {
             margin-top: 2em;
+            color: black;
+        }
+    }
+    .bubbles {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        justify-content: space-around;
+        .bubble1 {
+            width: 45px;
+            margin: 0;
+            border: none;
+            animation: moving 7s 1s linear infinite;
+        }
+        .bubble2 {
+            width: 120px;
+            margin: 0;
+            border: none;
+            animation: moving 7s 5s linear infinite;
+        }
+        .bubble3 {
+            width: 55px;
+            margin: 0;
+            border: none;
+            animation: moving 7s 3s linear infinite;
+        }
+        .bubble4 {
+            width: 70px;
+            margin: 0;
+            border: none;
+            animation: moving 7s 1s linear infinite;
+        }
+        .bubble5 {
+            width: 50px;
+            margin: 0;
+            border: none;
+            animation: moving 7s 6s linear infinite;
+        }
+        .bubble6 {
+            width: 100px;
+            margin: 0;
+            border: none;
+            animation: moving 7s 2s linear infinite;
+        }
+        .bubble7 {
+            width: 45px;
+            margin: 0;
+            border: none;
+            animation: moving 7s 1s linear infinite;
+        }
+        @keyframes moving {
+            0% {
+                opacity: 0;
+                transform: translateY(0);
+            }
+            25% {
+                opacity: 1;
+                transform: translateY(-250px) scale(1.1);
+            }
+            50% {
+                opacity: 1;
+                transform: translateY(-500px) scale(1.4);
+            }
+            75% {
+                opacity: 0.5;
+                transform: translateY(-750px) scale(1.6);
+            }
+            100% {
+                opacity: 0;
+                transform: translateY(-900px) scale(2);
+            }
         }
     }
 }
@@ -73,11 +148,34 @@ nav {
         background: rgb(241, 239, 239);
     }
     img {
-        max-width: 90%;
+        max-width: 100%;
+        animation: image 8s 2s ease-in infinite alternate;
+        @keyframes image {
+            0% {
+                transform: translateX(-1200px);
+            }
+            100% {
+                transform: translateX(0);
+            }
+        }
     }
     .responsive {
         text-align: center;
         font-size: 1.25em;
+        animation: responsive 8s 2s ease-in infinite alternate;
+        @keyframes responsive {
+            0% {
+                transform: translateX(1200px);
+            }
+            100% {
+                transform: translateX(-100px);
+            }
+        }
+    }
+    @media (max-width: 992px) {
+        .responsive {
+            margin-top: 4em;
+        }
     }
 }
 
