--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -18,6 +18,9 @@ nav {
             a {
                 color: $white;
                 font-weight: $font-weight-bold;
+                &:hover {
+                    background-color: $secondary;
+                }
             }
             .btn-nav {
                 background-color: $secondary !important;
@@ -26,6 +29,8 @@ nav {
                 font-weight: $font-weight-bold !important;
                 border: none;
                 margin-top: 3px;
+                border-radius: 5px;
+                box-shadow: inset 12px 12px 16px 0 rgba(0, 0, 0, 0.644), inset -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
                 span {
                     background-color: red;
                     padding: 0 5px;
@@ -36,6 +41,25 @@ nav {
     .navbar-toggler {
         .navbar-toggler-icon {
             border: 1px solid $white;
+        }
+    }
+    .nav-link {
+        position: relative;
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 2px;
+            background: $white;
+            transform: scaleX(0);
+            transform-origin: right;
+            transition: transform 0.25s ease-in;
+        }
+        &:hover::after {
+            transform: scaleX(1);
+            transform-origin: left;
         }
     }
 }
