--- a/scss/main.css
+++ b/scss/main.css
@@ -10107,6 +10107,9 @@ nav ul li a {
   color: #fff;
   font-weight: 700;
 }
+nav ul li a:hover {
+  background-color: #0e89ac;
+}
 nav ul li .btn-nav {
   background-color: #0e89ac !important;
   color: #fff;
@@ -10114,6 +10117,8 @@ nav ul li .btn-nav {
   font-weight: 700 !important;
   border: none;
   margin-top: 3px;
+  border-radius: 5px;
+  box-shadow: inset 12px 12px 16px 0 rgba(0, 0, 0, 0.644), inset -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
 }
 nav ul li .btn-nav span {
   background-color: red;
@@ -10121,6 +10126,25 @@ nav ul li .btn-nav span {
 }
 nav .navbar-toggler .navbar-toggler-icon {
   border: 1px solid #fff;
+}
+nav .nav-link {
+  position: relative;
+}
+nav .nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.25s ease-in;
+}
+nav .nav-link:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 .social {
