--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -38,11 +38,10 @@ nav {
             }
         }
     }
-    .navbar-toggler {
-        .navbar-toggler-icon {
-            border: 1px solid $white;
-        }
-    }
+    // .navbar-toggler {
+    //     .navbar-toggler-icon {
+    //         border: 1px solid $white;
+    //     }
     .nav-link {
         position: relative;
         &::after {
@@ -70,7 +69,7 @@ nav {
 
 // SECTION a
 .section-a {
-    margin-top: 5em;
+    // margin-top: 5em;
     background: url(../images/Project1/background.png);
     width: 100%;
     height: 100vh;
@@ -162,6 +161,62 @@ nav {
             }
         }
     }
+    .glassmorphism {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 20%;
+        height: 250px;
+        color: $white;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(70px);
+        background-clip: padding-box;
+        border-radius: 20px;
+        box-shadow: inset 12px 12px 16px 0 rgba(0, 0, 0, 0.644), inset -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+        overflow: hidden;
+        clip-path: circle(6.1% at 50% 13%);
+        animation: glassmorphism 1s ease-in alternate infinite;
+        @keyframes glassmorphism {
+            0% {
+                transform: translateY(0);
+            }
+            100% {
+                transform: translateY(40px);
+            }
+        }
+        p {
+            text-align: center;
+            color: black;
+        }
+        i {
+            font-size: 3em;
+        }
+        &:hover {
+            clip-path: circle(100% at 50% 50%);
+            transition: clip-path 2s ease-in;
+        }
+    }
+    .glassmorphism1 {
+        position: absolute;
+        top: 2em;
+        left: 2em;
+    }
+    .glassmorphism2 {
+        position: absolute;
+        right: 2em;
+        top: 2em;
+    }
+    .glassmorphism3 {
+        position: absolute;
+        bottom: 2em;
+        right: 2em;
+    }
+    .glassmorphism4 {
+        position: absolute;
+        bottom: 2em;
+        left: 2em;
+    }
 }
 
 // SECTION b
@@ -173,7 +228,7 @@ nav {
     }
     img {
         max-width: 100%;
-        animation: image 8s 2s ease-in infinite alternate;
+        animation: image 6s 2s ease-in infinite alternate;
         @keyframes image {
             0% {
                 transform: translateX(-1200px);
@@ -186,7 +241,7 @@ nav {
     .responsive {
         text-align: center;
         font-size: 1.25em;
-        animation: responsive 8s 2s ease-in infinite alternate;
+        animation: responsive 6s 2s ease-in infinite alternate;
         @keyframes responsive {
             0% {
                 transform: translateX(1200px);
