--- a/scss/main.css
+++ b/scss/main.css
@@ -10124,9 +10124,6 @@ nav ul li .btn-nav span {
   background-color: red;
   padding: 0 5px;
 }
-nav .navbar-toggler .navbar-toggler-icon {
-  border: 1px solid #fff;
-}
 nav .nav-link {
   position: relative;
 }
@@ -10152,7 +10149,6 @@ nav .nav-link:hover::after {
 }
 
 .section-a {
-  margin-top: 5em;
   background: url(../images/Project1/background.png);
   width: 100%;
   height: 100vh;
@@ -10275,6 +10271,76 @@ nav .nav-link:hover::after {
     transform: translateY(-900px) scale(2);
   }
 }
+.section-a .glassmorphism {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20%;
+  height: 250px;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
+  -webkit-backdrop-filter: blur(70px);
+          backdrop-filter: blur(70px);
+  background-clip: padding-box;
+  border-radius: 20px;
+  box-shadow: inset 12px 12px 16px 0 rgba(0, 0, 0, 0.644), inset -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+  overflow: hidden;
+  -webkit-clip-path: circle(6.1% at 50% 13%);
+          clip-path: circle(6.1% at 50% 13%);
+  -webkit-animation: glassmorphism 1s ease-in alternate infinite;
+          animation: glassmorphism 1s ease-in alternate infinite;
+}
+@-webkit-keyframes glassmorphism {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(40px);
+  }
+}
+@keyframes glassmorphism {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(40px);
+  }
+}
+.section-a .glassmorphism p {
+  text-align: center;
+  color: black;
+}
+.section-a .glassmorphism i {
+  font-size: 3em;
+}
+.section-a .glassmorphism:hover {
+  -webkit-clip-path: circle(100% at 50% 50%);
+          clip-path: circle(100% at 50% 50%);
+  transition: -webkit-clip-path 2s ease-in;
+  transition: clip-path 2s ease-in;
+  transition: clip-path 2s ease-in, -webkit-clip-path 2s ease-in;
+}
+.section-a .glassmorphism1 {
+  position: absolute;
+  top: 2em;
+  left: 2em;
+}
+.section-a .glassmorphism2 {
+  position: absolute;
+  right: 2em;
+  top: 2em;
+}
+.section-a .glassmorphism3 {
+  position: absolute;
+  bottom: 2em;
+  right: 2em;
+}
+.section-a .glassmorphism4 {
+  position: absolute;
+  bottom: 2em;
+  left: 2em;
+}
 
 .section-b {
   margin-top: 25em;
@@ -10285,8 +10351,8 @@ nav .nav-link:hover::after {
 }
 .section-b img {
   max-width: 100%;
-  -webkit-animation: image 8s 2s ease-in infinite alternate;
-          animation: image 8s 2s ease-in infinite alternate;
+  -webkit-animation: image 6s 2s ease-in infinite alternate;
+          animation: image 6s 2s ease-in infinite alternate;
 }
 @-webkit-keyframes image {
   0% {
@@ -10307,8 +10373,8 @@ nav .nav-link:hover::after {
 .section-b .responsive {
   text-align: center;
   font-size: 1.25em;
-  -webkit-animation: responsive 8s 2s ease-in infinite alternate;
-          animation: responsive 8s 2s ease-in infinite alternate;
+  -webkit-animation: responsive 6s 2s ease-in infinite alternate;
+          animation: responsive 6s 2s ease-in infinite alternate;
 }
 @-webkit-keyframes responsive {
   0% {
