commit-7 added modules

--- a/scss/_customVariables.scss
+++ b/scss/_customVariables.scss
@@ -14,3 +14,4 @@ $h5-font-size: 1.75em;
 $p-font-size: 2em;
 $section-margin-top: 25em;
 $navbar-light-toggler-border-color: white;
+$glassmorphism-margin: 2em;
