--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1,4 +1,5 @@
 @import "customVariables";
+@import "utilities";
 // *****************************************HOME PAGE ***********************************************
 // NAVBAR
 nav {
@@ -6,15 +7,12 @@ nav {
     .name {
         display: flex;
         h3 {
-            margin-top: 12px;
-            color: $white;
+            @include h3(12px, $white);
         }
     }
     ul {
         li {
-            margin-left: 1em;
-            font-size: 1.7em;
-            margin-top: 3px;
+            @include liHomeElement(1em, 1.7em, 3px);
             a {
                 color: $white;
                 font-weight: $font-weight-bold;
@@ -38,10 +36,11 @@ nav {
             }
         }
     }
-    // .navbar-toggler {
-    //     .navbar-toggler-icon {
-    //         border: 1px solid $white;
-    //     }
+    .navbar-toggler {
+        .navbar-toggler-icon {
+            border: 1px solid $white;
+        }
+    }
     .nav-link {
         position: relative;
         &::after {
@@ -54,17 +53,17 @@ nav {
             background: $white;
             transform: scaleX(0);
             transform-origin: right;
-            transition: transform 0.25s ease-in;
+            transition: transform 0.75s ease-in;
         }
         &:hover::after {
             transform: scaleX(1);
             transform-origin: left;
         }
     }
-}
-
-.social {
-    margin-left: 1.25em;
+    .social {
+        margin-left: 1.25em;
+        // @extend .nav-link;
+    }
 }
 
 // SECTION a
@@ -76,10 +75,9 @@ nav {
     background-position: center;
     background-size: cover;
     position: relative;
-    img {
-        max-width: 250px;
-        margin-bottom: 5em;
-        clip-path: circle(26.3% at 51% 51%);
+    .home-image {
+        @extend .mentor-image;
+        // clip-path: circle(100% at 51% 51%);;
     }
     .col-12 {
         margin-top: 5em;
@@ -91,51 +89,45 @@ nav {
         }
     }
     .bubbles {
-        width: 100%;
-        position: absolute;
-        bottom: 0;
-        display: flex;
-        justify-content: space-around;
+        @include bubblesGeneral(100%, absolute, 0, flex, space-around);
+        // width: $width;
+        // position: $position;
+        // bottom: $bottom;
+        // display: $display;
+        // justify-content: $content;
         .bubble1 {
             width: 45px;
-            margin: 0;
-            border: none;
+            @include bubbleMarginAndBorder(0, none);
             animation: moving 7s 1s linear infinite;
         }
         .bubble2 {
             width: 120px;
-            margin: 0;
-            border: none;
+            @include bubbleMarginAndBorder(0, none);
             animation: moving 7s 5s linear infinite;
         }
         .bubble3 {
             width: 55px;
-            margin: 0;
-            border: none;
+            @include bubbleMarginAndBorder(0, none);
             animation: moving 7s 3s linear infinite;
         }
         .bubble4 {
             width: 70px;
-            margin: 0;
-            border: none;
+            @include bubbleMarginAndBorder(0, none);
             animation: moving 7s 1s linear infinite;
         }
         .bubble5 {
             width: 50px;
-            margin: 0;
-            border: none;
+            @include bubbleMarginAndBorder(0, none);
             animation: moving 7s 6s linear infinite;
         }
         .bubble6 {
             width: 100px;
-            margin: 0;
-            border: none;
+            @include bubbleMarginAndBorder(0, none);
             animation: moving 7s 2s linear infinite;
         }
         .bubble7 {
             width: 45px;
-            margin: 0;
-            border: none;
+            @include bubbleMarginAndBorder(0, none);
             animation: moving 7s 1s linear infinite;
         }
         @keyframes moving {
@@ -199,23 +191,23 @@ nav {
     }
     .glassmorphism1 {
         position: absolute;
-        top: 2em;
-        left: 2em;
+        top: $glassmorphism-margin;
+        left: $glassmorphism-margin;
     }
     .glassmorphism2 {
         position: absolute;
-        right: 2em;
-        top: 2em;
+        right: $glassmorphism-margin;
+        top: $glassmorphism-margin;
     }
     .glassmorphism3 {
         position: absolute;
-        bottom: 2em;
-        right: 2em;
+        bottom: $glassmorphism-margin;
+        right: $glassmorphism-margin;
     }
     .glassmorphism4 {
         position: absolute;
-        bottom: 2em;
-        left: 2em;
+        bottom: $glassmorphism-margin;
+        left: $glassmorphism-margin;
     }
 }
 
@@ -404,6 +396,11 @@ footer {
     }
 }
 
+// *****************************************SERVICE PAGE ***********************************************
+.service-image {
+    @extend .mentor-image;
+}
+
 // *****************************************MENTORSHIP PAGE ***********************************************
 .section-mentorship {
     margin-top: 20em;
@@ -434,6 +431,12 @@ footer {
         margin-top: 3em;
         display: flex;
         justify-content: center;
+    }
+}
+
+.mentor-image {
+    img {
+        max-width: 100%;
     }
 }
 
@@ -481,6 +484,10 @@ footer {
             color: $primary;
         }
     }
+}
+
+.portfolio-image {
+    @extend .mentor-image;
 }
 
 .projects {
