--- a/scss/main.css
+++ b/scss/main.css
@@ -10088,6 +10088,10 @@ li {
   background: #b1abab;
 }
 
+.mentorship, .services, .portfolio, .home {
+  background-color: #0e89ac;
+}
+
 nav {
   background-color: #06bc9b;
 }
@@ -10124,6 +10128,9 @@ nav ul li .btn-nav span {
   background-color: red;
   padding: 0 5px;
 }
+nav .navbar-toggler .navbar-toggler-icon {
+  border: 1px solid #fff;
+}
 nav .nav-link {
   position: relative;
 }
@@ -10137,14 +10144,13 @@ nav .nav-link::after {
   background: #fff;
   transform: scaleX(0);
   transform-origin: right;
-  transition: transform 0.25s ease-in;
+  transition: transform 0.75s ease-in;
 }
 nav .nav-link:hover::after {
   transform: scaleX(1);
   transform-origin: left;
 }
-
-.social {
+nav .social {
   margin-left: 1.25em;
 }
 
@@ -10155,12 +10161,6 @@ nav .nav-link:hover::after {
   background-position: center;
   background-size: cover;
   position: relative;
-}
-.section-a img {
-  max-width: 250px;
-  margin-bottom: 5em;
-  -webkit-clip-path: circle(26.3% at 51% 51%);
-          clip-path: circle(26.3% at 51% 51%);
 }
 .section-a .col-12 {
   margin-top: 5em;
@@ -10577,6 +10577,10 @@ footer .back-to-top:hover .fa-arrow-circle-up {
   margin-top: 3em;
   display: flex;
   justify-content: center;
+}
+
+.mentor-image img, .portfolio-image img, .section-a .home-image img, .service-image img {
+  max-width: 100%;
 }
 
 .mentoring-style {
