--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,5 @@
 @import "reset";
 @import "style";
 @import "utilities";
-
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@300&family=Rubik&display=swap');
-
+//font-family
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@300&family=Rubik&display=swap");
