--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -72,9 +72,10 @@ nav {
     background: url(../images/Project1/background.png);
     width: 100%;
     height: 100vh;
-    background-position: center;
-    background-size: cover;
-    position: relative;
+    @include image(center, cover, relative);
+    // background-position: center;
+    // background-size: cover;
+    // position: relative;
     .home-image {
         @extend .mentor-image;
         // clip-path: circle(100% at 51% 51%);;
@@ -155,6 +156,7 @@ nav {
     }
     .glassmorphism {
         padding: 20px;
+        //@include backToTop(flex, column, center, center);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -167,7 +169,7 @@ nav {
         border-radius: 20px;
         box-shadow: inset 12px 12px 16px 0 rgba(0, 0, 0, 0.644), inset -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
         overflow: hidden;
-        clip-path: circle(6.1% at 50% 13%);
+        clip-path: circle(10.1% at 50% 14%);
         animation: glassmorphism 1s ease-in alternate infinite;
         @keyframes glassmorphism {
             0% {
@@ -273,23 +275,24 @@ nav {
         display: flex;
         flex-direction: column;
         text-align: center;
-        justify-content: center;
         padding: 0 10px;
         border-radius: 20px;
         h3 {
             color: $primary;
         }
         .fas {
-            font-size: 5em;
-            color: $primary;
-            margin-top: 1em;
-            margin-bottom: 1em;
+            @include icons (5em, $primary, 1em, 1em);
+            // font-size: 5em;
+            // color: $primary;
+            // margin-top: 1em;
+            // margin-bottom: 1em;
         }
         .fab {
-            font-size: 5em;
-            color: $primary;
-            margin-top: 1em;
-            margin-bottom: 1em;
+            @include icons (5em, $primary, 1em, 1em);
+            // font-size: 5em;
+            // color: $primary;
+            // margin-top: 1em;
+            // margin-bottom: 1em;
         }
         h3 {
             margin: 0.5em 0;
@@ -304,10 +307,11 @@ nav {
 .section-e {
     margin: $section-margin-top;
     .col-12 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        @include backToTop(flex, column, center, center);
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        // justify-content: center;
     }
     h2 {
         text-align: center;
@@ -445,9 +449,11 @@ footer {
 .mentoring-style {
     margin-top: $section-margin-top;
     .col-12 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        @include backToTop(flex, column, center, center);
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        // justify-content: center;
         h1 {
             color: $primary;
         }
@@ -457,9 +463,11 @@ footer {
     }
     .col-md-6 {
         padding: 3em;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        @include backToTop(flex, column, center, center);
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        // justify-content: center;
         background: rgb(245, 242, 242);
         border-radius: 20px;
         border: 10px solid white;
@@ -476,9 +484,11 @@ footer {
 .recent-works {
     margin: 10em;
     .col-12 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        @include backToTop(flex, column, center, center);
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        // justify-content: center;
         h1 {
             color: $primary;
         }
@@ -492,6 +502,7 @@ footer {
     @extend .mentor-image;
 }
 
+//Animation of the cards
 .projects {
     .card {
         padding: 0;
@@ -517,10 +528,11 @@ footer {
             transition: opacity 2.2s;
         }
         .card-img-overlay {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            @include backToTop(flex, column, center, center);
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // justify-content: center;
         }
     }
 }
