--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -36,9 +36,10 @@ nav {
             }
         }
     }
-    .navbar-toggler {
-        .navbar-toggler-icon {
-            border: 1px solid $white;
+    .navbar-toggler-icon {
+        i {
+            color: $white;
+            font-size: 1.5em;
         }
     }
     .nav-link {
