--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -258,9 +258,22 @@ nav {
     margin-top: $section-margin-top;
     .row {
         text-align: center;
+        //to set  colored text
+        h2 {
+            background: linear-gradient( 90deg, rgba(162, 21, 16, 0.8939950980392157) 0%, rgba(52, 122, 72, 1) 8%, rgba(204, 125, 21, 1) 17%, rgba(241, 15, 122, 1) 31%, rgba(108, 237, 6, 1) 47%, rgba(238, 176, 10, 1) 68%, rgba(222, 238, 2, 1) 84%, rgba(238, 39, 4, 1) 94%);
+            font-size: 5em;
+            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text;
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.644);
+        }
     }
     p {
         margin-top: 2em;
+        background: linear-gradient( 90deg, rgba(162, 21, 16, 0.8939950980392157) 0%, rgba(52, 122, 72, 1) 8%, rgba(204, 125, 21, 1) 17%, rgba(241, 15, 122, 1) 31%, rgba(108, 237, 6, 1) 47%, rgba(238, 176, 10, 1) 68%, rgba(222, 238, 2, 1) 84%, rgba(238, 39, 4, 1) 94%);
+        font-size: 3em;
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.644);
     }
 }
 
@@ -282,14 +295,14 @@ nav {
             color: $primary;
         }
         .fas {
-            @include icons (5em, $primary, 1em, 1em);
+            @include icons(5em, $primary, 1em, 1em);
             // font-size: 5em;
             // color: $primary;
             // margin-top: 1em;
             // margin-bottom: 1em;
         }
         .fab {
-            @include icons (5em, $primary, 1em, 1em);
+            @include icons(5em, $primary, 1em, 1em);
             // font-size: 5em;
             // color: $primary;
             // margin-top: 1em;
@@ -450,16 +463,46 @@ footer {
 .mentoring-style {
     margin-top: $section-margin-top;
     .col-12 {
+        background-color: rgba(0, 0, 0, 0.966);
+        z-index: -3;
         @include backToTop(flex, column, center, center);
         // display: flex;
         // flex-direction: column;
         // align-items: center;
         // justify-content: center;
-        h1 {
-            color: $primary;
+        //to set neon effect
+        .neon {
+            color: #fff;
+            font-size: 10em;
+            text-shadow: 0 0 20px #ff005b;
+            &:after {
+                content: attr(data-text);
+                position: absolute;
+                top: 0;
+                left: 22%;
+                z-index: -1;
+                color: #ff005b;
+                filter: blur(20px);
+            }
+            &:before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: #fe3a80;
+                opacity: 0.5;
+                z-index: -2;
+                filter: blur(80px);
+            }
         }
         p {
             margin: 2em;
+            color: #fff;
+            font-size: 2em;
+            text-shadow: 0 0 20px #ff0000;
+            text-align: center;
         }
     }
     .col-md-6 {
