--- a/scss/main.css
+++ b/scss/main.css
@@ -10405,8 +10405,20 @@ nav .social {
 .section-c .row {
   text-align: center;
 }
+.section-c .row h2 {
+  background: linear-gradient(90deg, rgba(162, 21, 16, 0.893995098) 0%, #347a48 8%, #cc7d15 17%, #f10f7a 31%, #6ced06 47%, #eeb00a 68%, #deee02 84%, #ee2704 94%);
+  font-size: 5em;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.644);
+}
 .section-c p {
   margin-top: 2em;
+  background: linear-gradient(90deg, rgba(162, 21, 16, 0.893995098) 0%, #347a48 8%, #cc7d15 17%, #f10f7a 31%, #6ced06 47%, #eeb00a 68%, #deee02 84%, #ee2704 94%);
+  font-size: 3em;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.644);
 }
 
 .section-d {
@@ -10592,16 +10604,45 @@ footer .back-to-top:hover .fa-arrow-circle-up {
   margin-top: 25em;
 }
 .mentoring-style .col-12 {
+  background-color: rgba(0, 0, 0, 0.966);
+  z-index: -3;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.mentoring-style .col-12 h1 {
-  color: #06bc9b;
+.mentoring-style .col-12 .neon {
+  color: #fff;
+  font-size: 10em;
+  text-shadow: 0 0 20px #ff005b;
+}
+.mentoring-style .col-12 .neon:after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 22%;
+  z-index: -1;
+  color: #ff005b;
+  filter: blur(20px);
+}
+.mentoring-style .col-12 .neon:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fe3a80;
+  opacity: 0.5;
+  z-index: -2;
+  filter: blur(80px);
 }
 .mentoring-style .col-12 p {
   margin: 2em;
+  color: #fff;
+  font-size: 2em;
+  text-shadow: 0 0 20px #ff0000;
+  text-align: center;
 }
 .mentoring-style .col-md-6 {
   padding: 3em;
