--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -466,7 +466,9 @@ footer {
     .col-12 {
         background-color: rgba(0, 0, 0, 0.966);
         z-index: -3;
+        margin-bottom: 3em;
         @include backToTop(flex, column, center, center);
+        border-radius: 30px;
         // display: flex;
         // flex-direction: column;
         // align-items: center;
@@ -474,8 +476,9 @@ footer {
         //to set neon effect
         .neon {
             color: #fff;
-            font-size: 10em;
+            font-size: 5em;
             text-shadow: 0 0 20px #ff005b;
+            text-align: center;
             &:after {
                 content: attr(data-text);
                 position: absolute;
