--- a/scss/main.css
+++ b/scss/main.css
@@ -10607,15 +10607,18 @@ footer .back-to-top:hover .fa-arrow-circle-up {
 .mentoring-style .col-12 {
   background-color: rgba(0, 0, 0, 0.966);
   z-index: -3;
+  margin-bottom: 3em;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-radius: 30px;
 }
 .mentoring-style .col-12 .neon {
   color: #fff;
-  font-size: 10em;
+  font-size: 5em;
   text-shadow: 0 0 20px #ff005b;
+  text-align: center;
 }
 .mentoring-style .col-12 .neon:after {
   content: attr(data-text);
